[tool.poetry]
name = "cp-api"
version = "0.1.0"
description = "CP FastAPI"
authors = ["Vinicios Neves <vinicios.neves@ustwo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
langchain = "^0.2.8"
langchain-openai = "^0.1.16"
langserve = "^0.2.2"
langchain-postgres = "^0.0.9"
langchain-community = "^0.2.7"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"
sse-starlette = "^2.1.2"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
